- group/designer/respondent edit was flawed
- Some better documentation for installing
- update create sql for mysql 5.x 
- link to phpesp_proto in the scripts dir
- make dashboard work again
- realm quoting fixed
- SFID 2672129: Fixed question position numbering to use 0, not 1, during copy and aggregate
- SFID 2669428: Fixed copy and aggregate so that conditions would be copied, as well.  Previously, conditions were not copied.  Any survey created prior to this version will not correctly copy conditions.

2.1.1 => 2.1.2
=========================
- some small bugs got squashed (status change for a survey was flacky and some other annoying things I can't remember)

2.1.0 => 2.1.1
=========================
- Fixed some old issues with save/resume surveys
- Fresh installations didn't have initial data due to an xml schema mismatch, easy to fix but inconvenient.
- Changing a user or designer caused his password to become empty, not very wise ....

2.0.2 => 2.1.0
=========================
- Dashboard implementation (by Bishop Bettini)
- start/stop date for a survey (by Bishop Bettini)
- A conditional question resulted in a "non-required" for the question it depends on, this limit has been removed.
- You can now do authenticated ldap binds when searching for the uid, some LDAP servers need this (is more secure than anonymous binds anyway)
- A default config file has been added (admin/phpESP.ini.php.default), your own changes should go into admin/phpESP.ini.php. The advantage is that new options can be added to the default file and you don't need to change anything to your own config file. Also a fixed part has been added (admin/phpESP.ini.php.fixed) containing values that should not be changed. The sequence is:
require (phpESP.ini.php.default); ==> defaults, gets overwritten with every new release
require (phpESP.ini.php); ==> your own values, never gets overwritten